[gd_scene load_steps=5 format=2]

[ext_resource path="res://projectiles/arrow_blue.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Spectral_rang/arrow.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.50886, 1.5173 )

[node name="arrow" type="Area2D"]
collision_layer = 0
collision_mask = 1114
script = ExtResource( 1 )

[node name="arrow_spr" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.5, -5.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 8.63564, -5.49541 )
scale = Vector2( 0.754015, 0.167838 )

[node name="Pos_R" type="Position2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 6.57
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_arrow_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_arrow_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
